--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,14 +1,24 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      Ionic Blank
+      Ionic Image Loading
     </ion-title>
+    <ion-buttons end>
+      <button ion-button (click) = "loadData()">Load</button>
+    </ion-buttons>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+  <ion-refresher (ionRefresh) ="clearCache($event)">
+    <ion-refresher-content></ion-refresher-content>
+  </ion-refresher>
+  <ion-list>
+    <ion-item *ngFor = "let user of users">
+      <ion-avatar>
+        <img-loader [src] = "user?.picture?.large" useImg (load)="onImageLoad($event)"></img-loader>
+      </ion-avatar>
+      <h2>{{ user.email }}</h2>
+    </ion-item>
+  </ion-list>
 </ion-content>
